--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rickard's Website</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" type="text/css" />
+    <script type="module" src="./main.js"></script>
   </head>
   <body>
     <canvas id="bg"></canvas>
@@ -59,6 +60,7 @@
       </blockquote>
     </main>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./main.js"></script>
+    
   </body>
 </html>
